# WB-OEMC

./: .gitignore  .gitmodules  Makefile  README.md  activate.sh  get_submodules.sh  main.py  pyproject.toml
data/: README.md
docs/: setup.md
env/: environment.yml
workflow/scripts/: .gitignore  Makefile  README.md  al_tso_data_download.ipynb  ba_tso_data_download.ipynb  config.yaml  mk_tso_data_download.ipynb  requirements.txt  run_scraper.py  setup.py  snakefile
workflow/scripts/energy_scrapers/: download_mepso.py  download_nosbih.py  download_ost.py  main.py  mepso_gen_scraper.py
